<resources>
    <string name="app_name">SP Providers Test2</string>
    <string name="services">Services</string>
    <string name="metal_spot_rate">METAL SPOT RATE</string>
    <string name="ms_ingot_scrap_spot_rate">MS INGOT/SCRAP SPOT RATE</string>
    <string name="pulses_spot_rate">PULSES SPOT RATE</string>
    <string name="edible_oil_spot_rate">EDIBLE OIL SPOT RATE</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="news">News</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="submit">Submit</string>
    <string name="share_market_msg">Share Market Msg</string>
    <string name="contact">Contact</string>
    <string name="link">Link</string>
    <string name="app_logo">App Logo</string>
    <string name="for_any_query_please_contact_us">For any query please contact us</string>
    <string name="date_and_time">Date and Time</string>

    <string-array name="Services_array">
        <item>Services</item>
        <item>METAL SPOT RATE</item>
        <item>MS INGOT/SCRAP SPOT RATE</item>
        <item>PULSES SPOT RATE</item>
        <item>EDIBLE OIL SPOT RATE</item>
    </string-array>

</resources>
