<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="@string/home"
        android:icon="@mipmap/profile"
        app:showAsAction="ifRoom" />

    <!--<item-->
        <!--android:id="@+id/action_reload"-->
        <!--android:orderInCategory="2"-->
        <!--android:title="@string/news"-->
        <!--android:icon="@mipmap/reload"-->
        <!--app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/action_filter"
        android:orderInCategory="1"
        android:title="@string/filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_news"
        android:orderInCategory="2"
        android:title="@string/news"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact_us"
        android:orderInCategory="4"
        android:title="@string/contact_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="5"
        android:title="@string/about_us"
        app:showAsAction="never" />

</menu>