<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#488747">

          <RelativeLayout
              android:id="@+id/share_market_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

              <TextView
                  android:id="@+id/tv_share_market_msg"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/share_market_msg"
                  android:textSize="20sp"
                  android:layout_marginTop="20dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginStart="15dp"/>


              <TextView
                  android:id="@+id/tv_share_contact"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/contact"
                  android:layout_above="@+id/tv_share_market_shareLink"
                  android:textSize="20sp"
                  android:layout_marginTop="20dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginStart="15dp"/>

              <TextView
                  android:id="@+id/tv_share_market_shareLink"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:text="@string/link"
                  android:textSize="20sp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginStart="15dp"
                  android:layout_marginBottom="25dp"
                  android:layout_marginTop="10dp"/>

          </RelativeLayout>

        </android.support.v7.widget.CardView>

</RelativeLayout>