<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameWrapper"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="2dp"
            android:textColorHint="@color/colorPrimary">

            <!--app:errorTextAppearance="@style/WelcomeErrorAppearance"-->
            <EditText
                android:id="@+id/reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/your_name"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EmailWrapper"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="2dp"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobileWrapper"
            android:layout_marginTop="6dp"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/reg_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginBottom="25dp"
                android:hint="@string/mobile"
                android:maxLines="1"
                android:maxLength="10"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>